Filtered registered events

--- a/assets/Style.css
+++ b/assets/Style.css
@@ -196,3 +196,8 @@ iframe {
         margin-top: 20px;
     }
 }
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: block !important;
+  visibility: hidden !important;
+}
