Satic Front End Final

--- a/assets/Style/Style.css
+++ b/assets/Style/Style.css
@@ -1,6 +1,6 @@
 .home-cover {
     padding-top: 60px;
-    background: url(../Images/5.jpg) no-repeat center center;
+    background: url(../images/new_cover/Cover_2.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -93,7 +93,7 @@ body {
 }
 
 #t1 {
-    background: url(../images/new_cover/rampage.jpg) no-repeat center center;
+    background: url(../images/new_cover/20.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -101,7 +101,7 @@ body {
 }
 
 #t2 {
-    background: url(../images/new_cover/Naach.jpg) no-repeat center center;
+    background: url(../images/new_cover/Inaugural.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -109,7 +109,7 @@ body {
 }
 
 #t3 {
-    background: url(../images/new_cover/Footloose.jpg) no-repeat center center;
+    background: url(../images/new_cover/EDM.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -117,7 +117,7 @@ body {
 }
 
 #t4 {
-    background: url(../images/new_cover/Rhapsody.jpg) no-repeat center center;
+    background: url(../images/new_cover/Ragna-Rock.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -125,7 +125,7 @@ body {
 }
 
 #t5 {
-    background: url(../images/new_cover/hiphopstreet.jpg) no-repeat center center;
+    background: url(../images/new_cover/5.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -133,7 +133,7 @@ body {
 }
 
 #t6 {
-    background: url(../images/new_cover/codemutant.jpg) no-repeat center center;
+    background: url(../images/Sponsers/website.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -141,7 +141,120 @@ body {
 }
 
 #t7 {
-    background: url(../images/new_cover/Surge.jpg) no-repeat center center;
+    background: url(../images/new_cover/rampage.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t8 {
+    background: url(../images/new_cover/Footloose.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t9 {
+    background: url(../images/new_cover/Naach.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t10 {
+    background: url(../images/new_cover/hiphopstreet.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t11 {
+    background: url(../images/new_cover/Rhapsody.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
+#t12 {
+    background: url(../images/new_cover/paytm-01-01.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t13 {
+    background: url(../images/Gallery/1.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t14 {
+    background: url(../images/new_cover/get-pip.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t15 {
+    background: url(../images/Event/Senate.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t16 {
+    background: url(../images/new_cover/battledrome.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t17 {
+    background: url(../images/new_cover/codemutant.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t18 {
+    background: url(../images/new_cover/campus-ambassodors.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t19 {
+    background: url(../images/youth_run/IMG_2191.JPG) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t20 {
+    background: url(../images/new_cover/accomodation.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#t21 {
+    background: url(../images/new_cover/HeadRush.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -273,6 +386,10 @@ iframe {
 }
 
 .event:hover{
+    text-decoration: none;
+}
+
+.home-button:hover{
     text-decoration: none;
 }
 
